src/objects/My_Prescription__c.object
<CustomObject>
    <fields>
        <fullName>Covered__c</fullName>
        <formula>IF( Formulary_Association__r.Covered__c = TRUE, IMAGE(&quot;/resource/greenCircle&quot;, &quot;COVERED)&quot;, 25,25), IMAGE(&quot;/resource/redCircle&quot;, &quot;NOT COVERED&quot;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is It Covered?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Name__c</fullName>
        <formula>Formulary_Association__r.Insured_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finding_Prescription_Filter__c</fullName>
        <description>Filter for query. Medication name should be lowercase</description>
        <formula>CASESAFEID(Formulary_Association__r.OwnerId) + LOWER(Formulary_Association__r.Insured_Item__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is simply a filter used to query the owner and the drug name</inlineHelpText>
        <label>Finding Prescription Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulary_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulary Association</label>
        <referenceTo>Formulary_Association__c</referenceTo>
        <relationshipLabel>Formulary Association</relationshipLabel>
        <relationshipName>Formulary_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Insurance__c</fullName>
        <label>My Insurance</label>
        <referenceTo>My_Formulary__c</referenceTo>
        <relationshipLabel>My Prescriptions (My Insurance)</relationshipLabel>
        <relationshipName>My_Prescriptions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Number__c</fullName>
        <label>Pharmacy Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <label>Pharmacy</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pill_Counter__c</fullName>
        <label>Number of Pills in Current Prescription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pills_Taken__c</fullName>
        <label>Number of Pills Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescribing_Physician__c</fullName>
        <label>Prescribing Physician</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescription_Number__c</fullName>
        <label>Refills Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RX_Number__c</fullName>
        <label>RX Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Pills__c</fullName>
        <formula>Pill_Counter__c -  Pills_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Your remaining pills in this prescription.</inlineHelpText>
        <label>Remaining Pills in this Prescription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Take_with_Food__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required to Take with Food</label>
        <type>Checkbox</type>
    </fields>
    <label>My Prescription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Drug_Name__c</columns>
        <columns>Remaining_Pills__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RX-{000000}</displayFormat>
        <label>Prescription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Prescriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>